--- a/lib/catcasts_phx_web/templates/layout/app.html.eex
+++ b/lib/catcasts_phx_web/templates/layout/app.html.eex
@@ -31,5 +31,8 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
