--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -20,3 +20,16 @@
   color: #fefefe;
   text-shadow: 1px 1px 2px #0a0a0a;
 }
+
+// fixes FOUC
+.no-js .top-bar {
+  display: none;
+}
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+  .no-js .title-bar {
+    display: none;
+  }
+}
