--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,5 +3,5 @@
 @include foundation-everything;
 @include foundation-grid;
 
-@import "custom.scss";
-@import "phoenix.scss";
+@import "custom";
+@import "phoenix";
